--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
 node_modules
 node_modules
+# Node modules
+node_modules/
+
+# Next.js build output
+.next/
+
+# Environment variables file
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Operating System files
+.DS_Store
+Thumbs.db
+
+# IDE/editor directories and files
+.vscode/
+.idea/
+
+# Test directories
+coverage/
+
+# Local npm or yarn global folder
+.npm/
+.yarn/
+
+# Next.js Static Export
+out/
+
+# Next.js pages folder (in case you use custom folder structure)
+pages/
+
+# Optional: TypeScript build directory (if using TypeScript)
+*.tsbuildinfo
