--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "apexcharts": "^3.45.2",
+    "axios": "^1.7.9",
+    "fast-average-color": "^9.4.0",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
     "next": "^14.1.4",
@@ -18,7 +20,8 @@
     "react-dom": "^18",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
