--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^11.0.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
