--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_BASE_URL=http://13.203.35.159:3035/api/v1
+NEXT_PUBLIC_BASE_URL=https://ecommerce-backend-8utt.onrender.com/api/v1
 NEXT_PUBLIC_BUSINESS_NAME = SUBHI_E_LTD
