--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL = http://13.203.35.159:3035/api/v1
+NEXT_PUBLIC_API_URL = https://ecommerce-backend-8utt.onrender.com/api/v1
 NEXT_PUBLIC_BUSINESS_TYPE = SUBHI_E_LTD
