--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_API_URL = https://ecommerce-backend-8utt.onrender.com/api/v1
 NEXT_PUBLIC_BUSINESS_TYPE = SUBHI_E_LTD
+CLOUDINARY_CLOUD_NAME=dxgapyggk
+CLOUDINARY_API_KEY=564883147853518
+CLOUDINARY_API_SECRET=0_A-IM3GZODecKHuvJSKmLhU6Pg
