--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
     "react-toastify": "^11.0.2",
+    "sharp": "^0.33.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
