--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
     "react-toastify": "^11.0.2",
+    "saas": "^1.0.0",
     "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.0.4"
+    "swiper": "^11.0.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
