--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsvectormap": "^1.5.3",
     "next": "^14.1.4",
     "next-cloudinary": "^6.16.0",
+    "next-router": "^1.3.6",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
