--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "fast-average-color": "^9.4.0",
     "flatpickr": "^4.6.13",
     "formidable": "^3.5.2",
+    "free-nextadmin-nextjs": "file:",
+    "jodit-react": "^5.0.10",
     "jsvectormap": "^1.5.3",
-    "next": "^14.1.4",
+    "next": "^15.1.6",
     "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
