--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.14",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
+    "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.17.4",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.474.0",
     "next": "^14.2.18",
     "nprogress": "^0.2.0",
     "rc-slider": "^10.5.0",
@@ -29,6 +36,8 @@
     "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
