--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "jsvectormap": "^1.5.3",
     "next": "^15.1.6",
     "next-cloudinary": "^6.16.0",
-    "react": "^18",
+    "react": "^19.0.0",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
     "react-table": "^7.8.0",
