--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.54.2",
+    "react-loader-spinner": "^6.1.6",
     "react-loading": "^2.0.3",
     "react-paginate": "^8.2.0",
     "react-slick": "^0.29.0",
