--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@swc/helpers": "^0.5.15",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,7 +23,7 @@
     "framer-motion": "^10.17.4",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
-    "next": "^15.1.6",
+    "next": "^15.2.4",
     "nprogress": "^0.2.0",
     "rc-slider": "^10.5.0",
     "react": "^18",
