--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
