--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-loader-spinner": "^6.1.6",
     "react-loading": "^2.0.3",
     "react-paginate": "^8.2.0",
